# notelib

./: .gitignore  README.md  api_call.json  export.xlsx  manage.py  notelib_urls.txt  pyproject.toml  requirements.txt
artefacts/: admin.py  models.py  renderers.py  serializers.py  services.py  storage.py  urls.py  views.py
executions/: admin.py  models.py  sandbox.py  serializers.py  services.py  tasks.py  urls.py  views.py  web_urls.py  web_views.py
features/: admin.py  apps.py  models.py  services.py  urls.py  views.py
frontend/: urls.py
notebooks/: admin.py  forms.py  models.py  services.py  urls.py  views.py
notelib/: admin.py  asgi.py  editors.py  models.py  settings.py  urls.py  views.py  wsgi.py
notelib/templatetags/: wiki_toc.py
pipelines/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/: admin.py  models.py  services.py  storage.py  urls.py  views.py
src/notelib_core/: __init__.py  client.py  feature.py  loader.py  registry.py  sandbox.py
src/notelib_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: notelib_front.css  wiki_custom.css
static/js/: easymde-init.js  launch.js  notelib_api.js  pipelines.js  pipelines.old.js  toastui-init.js  toastui-viewer.js
templates/artefacts/: detail.html  list.html
templates/notebooks/: detail.html  list.html  upload.html
templates/pipelines/: detail.html  edit.html  list.html
templates/runs/: detail.html  launch.html  list.html
templates/wiki/: base.html
templates/wiki/includes/: render.html
